--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -80,3 +80,23 @@
     font-weight: 400;
     font-family: cursive;
 }
+@media (max-width: 767px) {
+    .cardsDiv{width: 100%;}
+    .cardDiv>.div3 {
+        font-size: 2.5rem;
+        padding: 0rem;
+    }
+    .cardDiv>.div1 {
+        width: 20%;
+        padding: 1rem;
+        height: 6rem;
+    }    
+
+.cardDiv>.div2>.detailDiv>.nameDiv {
+    font-size: 1rem;
+}
+.cardDiv>.div2>.detailDiv>.nickNameDiv{
+font-size: 0.7rem;
+margin-top: 0.3rem;
+}
+}
